@@ -1,5 +1,11 @@
 2013-07-23  Ian Lance Taylor  <iant@google.com>
 
+	* go-backend.c: Don't #include "rtl.h".
+	(go_imported_unsafe): Don't call init_varasm_once.
+	* Make-lang.in (go/go-backend.o): Don't depend on $(RTL_H).
+
+2013-07-23  Ian Lance Taylor  <iant@google.com>
+
 	* go-lang.c: Don't #include "except.h".
 	* Make-lang.in (go/go-lang.o): Don't depend on $(EXCEPT_H).
 
